[package]
name = "tackd"
version = "0.0.19"
description = "Tackd.io"
edition = "2021"

[dependencies]
hyper = { version = "0.14" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
axum = { version = "0.5", features = ["http2"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = { version = "3", features = ["cargo", "env"] }
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3", features = ["trace", "auth", "limit"] }
tower = { version = "0.4", features = ["filter"] }
url = { version = "2", features = ["serde"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
orion = { version = "0.17", features = ["safe_api"] }
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
rand = { version = "0.8", features = ["std_rng"] }
mongodb = { version = "2.3" }
bson = { version = "2.4", features = ["chrono-0_4"] }
serde_bytes = "0.11"
cloud-storage = "0.10"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }

